--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,18 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx --watch src"
+    "dev": "tsx --watch src/index.ts"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "twilio": "^5.0.1",
@@ -24,10 +22,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.29",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.2"
   }
 }
